--- a/app/partials/hourreports.html
+++ b/app/partials/hourreports.html
@@ -94,7 +94,7 @@
                                                   <option value="billed">Done/Billed</option>
                                                   <option value="payed">Done/Payed</option>
                                             </select>
-                                            <button class="btn btn-primary btn-bitbucket btn-xs" type="button" ng-if="showMarker" ng-click="markasAllAsbilled()">mark as billed</button>
+                                           <!--  <button class="btn btn-primary btn-bitbucket btn-xs" type="button" ng-if="showMarker" ng-click="markasAllAsbilled()">mark as billed</button> -->
                                           </div>
 
                                         </div>
