disable button when creating project

--- a/app/partials/clientDashboard.html
+++ b/app/partials/clientDashboard.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" ng-click="createProject()">Save</button>
+                    <button type="button" class="btn btn-primary" ng-click="createProject()" ng-disabled="isCreating">Save</button>
                 </div>
             </div>
         </div>
