--- a/app/partials/clientprojects.html
+++ b/app/partials/clientprojects.html
@@ -402,7 +402,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" ng-click="createAdminProject()">Save</button>
+                    <button type="button" class="btn btn-primary" ng-click="createAdminProject()" ng-disabled="isCreating">Save</button>
                 </div>
             </div>
         </div>
