right number format

--- a/app/partials/pdetails.html
+++ b/app/partials/pdetails.html
@@ -161,11 +161,11 @@
                                         <div class="col-md-3 p0 pb10 bill-times bt-bar" >
                                           <div class="bill-estimation">
                                             <span class="est">Estimation</span>
-                                            <span class="esthours">{{estimationTotal}} h</span>
+                                            <span class="esthours">{{estimationTotal | number:2}} h</span>
                                           </div>
                                           <div class="bill-realtime">
                                             <span class="rt">Real Time</span>
-                                            <span class="rthours">{{realtimeTotal}} h</span>
+                                            <span class="rthours">{{realtimeTotal | number:2}} h</span>
                                           </div>
                                         </div>
                                         <div style="clear:both;"></div>
